# My_Avatar

./: .gitignore  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
my_avatar/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: stream_avatar.js
website/: views.py
website/personal_gpt/: chain.py  personal_data.txt
website/templates/: index.html
