[tool.poetry]
name = "my-avatar"
version = "0.1.0"
description = ""
authors = ["dorstrauss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.340"
django = "^4.2.7"
openai = "^1.3.5"
chromadb = "^0.4.18"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
